# facture

./: .env  .gitignore  Cargo.toml  README.md  build.rs  diesel.toml  flake.nix
crates/database/: Cargo.toml
crates/database/migrations/2023-11-26-121612_create_customers/: up.sql
crates/database/migrations/2024-02-10-095629_create_items/: up.sql
crates/database/src/: customer.rs  invoice.rs  lib.rs  schema.rs
crates/facture/: Cargo.toml
crates/facture/src/: main.rs
crates/facture/src/commands/: customer.rs  invoice.rs  mod.rs
src/: cli.rs  database.rs  filesystem_database.rs  main.rs  models.rs  ui.rs
src/commands/: business.rs  customer.rs  invoice.rs  item.rs  mod.rs
src/database/: customer.rs  invoice.rs  item.rs  items.rs  mod.rs
src/database/migrations/2023-11-26-121612_create_customers/: down.sql  up.sql
src/database/migrations/2024-02-10-093718_create_invoices/: up.sql
src/database/models/: business.rs  config.rs  customer.rs  invoice.rs  mod.rs
src/models/: business.rs  config.rs  customer.rs  invoice.rs  mod.rs
src/renderer/: mod.rs  templates.rs
src/template/: facture_template.rs  invoice_maker.rs  mod.rs  typst_invoice.rs
src/ui/: mod.rs  prompt.rs
template/: lib.typ  main.typ
templates/: invoice.typ
