[package]
name = "facture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "now", "serde"] }
clap = { version = "4.5.22", features = ["cargo", "derive"] }
comfy-table = "7.1.3"
inquire = { version = "0.7.5", features = ["editor"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.14.0"
thiserror = "2.0.6"
uuid = { version = "1.11.0", features = ["v7"]  }

[dev-dependencies]
