[package]
name = "facture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "now", "serde"] }
clap = { version = "4.5.22", features = ["cargo", "derive"] }
comfy-table = "7.1.3"
inquire = { version = "0.7.5", features = ["editor"] }
minijinja = "2.6.0"
native_db = "0.8.1"
native_model = "0.4.20"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
tempfile = "3.14.0"
ureq = "2.12.1"
uuid = { version = "1.11.0", features = ["v7"]  }

[dev-dependencies]

[build-dependencies]
clap = { version = "4.5.22", features = ["cargo", "derive"] }
clap-markdown = "0.1.4"
