[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite"] }
anyhow.workspace = true

[dev-dependencies]
lazy_static.workspace = true
tempfile.workspace = true
diesel_migrations.workspace = true
