[package]
authors.workspace = true
name = "facture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
database = { version = "0.1.0", path = "../database" }
clap = { version = "4.4.8", features = ["cargo", "derive"] }
console = "0.15.8"
